force-app/main/default/objects/AsyncJobAction__mdt/AsyncJobAction__mdt.object-meta.xml
<CustomObject>
    <description>Represents the mapping between the JobName and AsyncJobHandler ApexClass</description>
    <label>Async Job Action</label>
    <pluralLabel>Async Job Actions</pluralLabel>
</CustomObject>