force-app/main/default/objects/AsyncJobAction__mdt/fields/AsyncJobHandler__c.field-meta.xml
<CustomField>
    <fullName>AsyncJobHandler__c</fullName>
    <description>Represents the AsyncJobHandler class that the Job Name is mapped to</description>
    <label>Async Job Handler</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>