force-app/main/default/objects/AsyncJobAction__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The configuration will take place only if active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>