force-app/main/default/objects/AsyncJobAction__mdt/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <description>The Async Job Name to map by</description>
    <label>Job Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>